--- a/supernova/gui/templates/gui/base.html
+++ b/supernova/gui/templates/gui/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
-<body style="padding-top: 50px;">
+<body style="padding-top: 80px;">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="/">Supernova</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
