--- a/supernova/gui/templates/gui/base.html
+++ b/supernova/gui/templates/gui/base.html
@@ -10,6 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% block script %} {% endblock %}
 </head>
 <body style="padding-top: 80px;">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
